指摘対応: repository testとPR内容を修正